another overflow fix

--- a/src/components/v3/UsageAccordion/styles.module.css
+++ b/src/components/v3/UsageAccordion/styles.module.css
@@ -2,6 +2,10 @@
 
 @value lightGray from layout;
 
+.readMoreSection {
+    overflow-wrap: anywhere;
+}
+
 .readMore {
     font-weight: 700;
 }
